<resources>
    <string name="app_name">Lection</string>
    <string name="hola">Hello</string>
    <string name="pregunta">Which number is #4?</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="nuevo_intento">Try again</string>
    <string name="ingrese_su_nombre">Your name</string>
    <string name="jugar">Play</string>
    <string name="nombre">Name:</string>
    <string name="end">End</string>
    <string name="nueva_pregunta">Which number is #2?</string>
</resources>

