<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dptoredes.leccion.MainActivity">


    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="190dp"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/nombre_ingresado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="179dp"
        android:layout_toEndOf="@+id/nombre"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ingrese_su_nombre"/>

    <Button
        android:id="@+id/btnjugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombre_ingresado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/jugar"
        android:onClick="empezarJuego"/>
</RelativeLayout>
